# student-cup-2020-solution

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: Predict.ipynb  Preprocess.ipynb  Train.ipynb  TrainTestDist.ipynb
src/: Predict.py  Preprocess.py  Train.py
