[tool.poetry]
name = "student-cup-2020-solution"
version = "0.1.0"
description = ""
authors = ["moriya <c0115334ef@edu.teu.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.4.0"
jupyter = "^1.0.0"
numpy = "^1.18.5"
scikit-learn = "^0.23.1"
tqdm = "^4.46.1"
pandas = "^1.0.5"
nltk = "^3.5"
transformers = "^3.0.2"
lda = "^2.0.0"
jupyterlab = "^2.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
